style.css
@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700');

html, body {
    height:100%;
    width:100%;
    font-family: 'Montserrat', sans-serif;
    font-color:#222;
}

/*---NavBar--*/
.navbar{
  padding: .8rem;
}
.navbar-nav{
  padding-right:20px;
}
.nav-link{
  font-size: 1.1em !important;
}
.navbar-nav a:hover{
  color:#A200FF !important;
}
.navbar-nav .active a{
  color:#FA00F0 !important;
}

/*---PageElements--*/

.fixedheader{
  color:rgba(250,0,230,.5);
  font-size:5em;
  text-align:center;
  position:absolute;
  top:50%;
  left:50%;
  transform:translate(-50%, -50%);
}

.imagecontainer{

}

.imageframe{
  float:left;
  width:28%;
  height:auto;
  border-top-color: rgb(250, 0, 240);
  border-top-style: solid;
  border-top-width: 3px;
  border-right-color: rgb(250, 0, 240);
  border-right-style: solid;
  border-right-width: 3px;
  border-bottom-color: rgb(250, 0, 240);
  border-bottom-style: solid;
  border-bottom-width: 3px;
  border-left-color: rgb(250, 0, 240);
  border-left-style: solid;
  border-left-width: 3px;
  margin-top:2rem;
  margin-bottom:2rem;
  margin-left:1rem;
  margin-right:1rem;
}

.social a{
  color: #d5d5d5;
  font-size: 3.5em;
  padding: 1.5rem;
  margin: auto;
}
.card{
  color: #A200FF;
  margin-top:1.5rem;
  margin-bottom:1.5rem;
  margin-left:1.5rem;
  margin-right:1.5rem;
  float:left;
}
.teamphoto{
  display:block;
  max-width:30%;
  height:auto;
  float:left;
  margin-top:1.5rem;
  margin-right:1.5rem;
  margin-left:1.5rem;
  margin-bottom:1rem;
}
.teamtext{
  max-width:70%;
  float:left;
  padding-left:.1rem;
  padding-top:.1rem;
}
.teamMember{
  color:#A200FF;
  font-size:2em;
  max-width:70%;
}
.teamtitle{
  color:#FA00F0;
  font-size:1.2em;
  max-width:70%;
}
.teamaddy{
  font-size:1em;
  max-width:70%;
}
.teamblurb{
  color:#3f3f3f;
  font-size:1em;
  max-width:70%;
  padding-top:10px;
}
.serviceicon{
  display:block;
  max-width:30%;
  height:auto;
  float:left;
  margin-top:1.5rem;
  margin-right:1.5rem;
  margin-left:1.5rem;
  margin-bottom:1.5rem;
}
.servicetext{
  max-width:100%;
  float:left;
  padding-left:.1rem;
  padding-top:1rem;
}
.servicecat{
  max-width:100%;
  font-size:2em;
}
.servicedesc{
  max-width:100%;
  font-size:1em;
}
.h3{
  color:#222;
  margin-bottom: 10px;
  padding-top:1.5rem;
  padding-bottom:1.5rem;
}
.mainheader{
  color:#222;
  padding-top:1.5rem;
  padding-bottom:1.5rem;
}

 .fa-facebook:hover,
 .fa-twitter:hover,
 .fa-instagram:hover,
 .fa-linkedin:hover,
 .fa-google-plus-g:hover{
  color:#f600f1;
}
.copyright{
  padding:auto;
  width:100%;
}

/*---Footer--*/
footer{
   background-color: #3f3f3f;
   color: #d5d5d5;
   padding-top: 2rem;
   width:100%;
}

hr.light{
  border-top:1px solid #d5d5d5;
  width:75%;
  margin-top:.8rem;
  margin bottom:1rem;
}
hr.light-100{
  border-top:1px solid #d5d5d5;
  width:100%;
  margin-top:.8rem;
  margin bottom:1rem;
}


/*---Media Queries --*/


@media (max-width: 992px) {

    .imageframe{
      float:left;
      width:80%;
      height:auto;
      margin-top:1rem;
      margin-bottom:1rem;
      margin-left:.5rem;
      margin-right:.5rem;
    }
    .social a{
      color: #d5d5d5;
      font-size: 2.5em;
      padding: 1.5rem;
    }
    .fixedheader{
      color:rgba(250,0,230,.75);
      font-size:3em;
      text-align:center;
      position:absolute;
      top:50%;
      left:50%;
      transform:translate(-50%, -50%);
    }
    .teamphoto{
      display:block;
      max-width:50%;
      height:auto;
      float:left;
      margin-top:1.5rem;
      margin-right:1.5rem;
      margin-left:1.5rem;
      margin-bottom:1.5rem;
    }
    .teamtext{
      font-size:.6em;
      max-width:100%;
      float:left;
      padding-left:.1rem;
      padding-top:1rem;
    }
    .teamMember{
      color:#A200FF;
      font-size:2em;
      max-width:100%;
    }
    .teamtitle{
      color:#FA00F0;
      font-size:1.2em;
      max-width:100%;
    }
    .teamaddy{
      font-size:1em;
      max-width:100%;
    }
    .teamblurb{
      color:#3f3f3f;
      font-size:1em;
      max-width:100%;
      padding-top:10px;
    }
    .servicetext{
      font-size:1em;
      max-width:100%;
      float:left;
      padding-left:.1rem;
      padding-top:1rem;
    }
  }
@media (max-width: 768px) {
    .social a{
      color: #d5d5d5;
      font-size: 2em;
      padding: .8rem;
    }
    .fixedheader{
      color:rgba(250,0,230,.75);
      font-size:2.5em;
      text-align:center;
      position:absolute;
      top:50%;
      left:50%;
      transform:translate(-50%, -50%);
    }
    .teamphoto{
      display:block;
      width:40%;
      height:auto;
      float:left;
      margin:auto;
    }
    .teamtext{
      font-size:.6em;
      max-width:100%;
      float:left;
      padding-left:.1rem;
      padding-top:1rem;
    }
    .teamMember{
      color:#A200FF;
      font-size:2em;
      max-width:100%;
    }
    .teamtitle{
      color:#FA00F0;
      font-size:1.2em;
      max-width:100%;
    }
    .teamaddy{
      font-size:1em;
      max-width:100%;
    }
    .teamblurb{
      color:#3f3f3f;
      font-size:1em;
      max-width:100%;
      padding-top:10px;
    }
    .servicetext{
      font-size:1em;
      max-width:900%;
      padding-left:.1rem;
      padding-top:1rem;
    }
    .servicecat{
      max-width:100%;
      font-size:1.8em;
    }
    .servicedesc{
      max-width:100%;
      font-size:1em;
    }
}
@media (max-width: 576px) {
    .social a{
    color: #d5d5d5;
    font-size: 2em;
    padding: .8rem;
    }

  .fixedheader{
      color:rgba(250,0,230,.75);
      font-size:1.65em;
      text-align:center;
      position:absolute;
      top:50%;
      left:50%;
      transform:translate(-50%, -50%);
    }
  .teamphoto{
      display:block;
      width:40%;
      height:auto;
      float:left;
      margin:auto;
    }
    .teamtext{
      font-size:.6em;
      max-width:100%;
      float:left;
      padding-left:.1rem;
      padding-top:1rem;
    }
    .teamMember{
      color:#A200FF;
      font-size:2em;
      max-width:100%;
    }
    .teamtitle{
      color:#FA00F0;
      font-size:1.2em;
      max-width:100%;
    }
    .teamaddy{
      font-size:1em;
      max-width:100%;
    }
    .teamblurb{
      color:#3f3f3f;
      font-size:1em;
      max-width:100%;
      padding-top:10px;
    }
    .servicetext{
      font-size:.6em;
      max-width:100%;
      float:left;
      padding-left:.1rem;
      padding-top:1rem;
    }
    .servicecat{
      max-width:100%;
      font-size:1.8em;
    }
    .servicedesc{
      max-width:100%;
      font-size:1em;
    }
}
.embed-responsive-item{
  display:block;
  margin-left:auto;
  margin-right:auto;
  width: 40%;
  tex-align:center;
}

/*---Firefox Bug Fix --*/
.carousel-item {
  transition: -webkit-transform 0.5s ease;
  transition: transform 0.5s ease;
  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
  -webkit-backface-visibility: visible;
  backface-visibility: visible;
}
/*--- Parallax Background Image --*/
figure {
  position: relative;
  width: 100%;
  /* height: 55%; */
  height: 25%;
  margin: 0!important;
}

.fixed-wrap {
  clip: rect(0, auto, auto, 0);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
#fixed {
  background-image: url('img/cropped-Blockchain-chains-1.png');
  position: fixed;
  display: block;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center center;
  -webkit-transform: translateZ(0);
          transform: translateZ(0);
  will-change: transform;
}

.fixed-wrap2 {
  clip: rect(0, auto, auto, 0);
  position: absolute;
  top: 500;
  left: 0;
  width: 100%;
  height: 100%;
}

#teamfixed {
  background-image: url('img/blocktooth.png');
  position: fixed;
  display: block;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center center;
  -webkit-transform: translateZ(0);
          transform: translateZ(0);
  will-change: transform;
}

#servfixed {
  background-image: url('img/granite.png');
  position: fixed;
  display: block;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center center;
  -webkit-transform: translateZ(0);
          transform: translateZ(0);
  will-change: transform;
}

#resourcefixed {
  background-image: url('img/fixedHex.png');
  position: fixed;
  display: block;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center center;
  -webkit-transform: translateZ(0);
          transform: translateZ(0);
  will-change: transform;
}

/*--- Bootstrap Padding Fix --*/
[class*="col-"] {
    padding: 1rem;
}





/*
Extra small (xs) devices (portrait phones, less than 576px)
No media query since this is the default in Bootstrap
Small (sm) devices (landscape phones, 576px and up)
@media (min-width: 576px) { ... }
Medium (md) devices (tablets, 768px and up)
@media (min-width: 768px) { ... }
Large (lg) devices (desktops, 992px and up)
@media (min-width: 992px) { ... }
Extra (xl) large devices (large desktops, 1200px and up)
@media (min-width: 1200px) { ... }
*/

